<resources>
    <string name="app_name">BloodDonationApp Florence Mbabazi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checked">checked</string>
    <string name="unchecked">unchecked</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="all_request">All Request</string>
    <string name="makearequest">Make A Request</string>
    <string name="personal_information">Personal Information</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="location_of_donation">Location of donation</string>
    <string name="my_location">My Location</string>
    <string name="your_location">Your Location</string>
    <string name="select">Select</string>
    <string name="blood_group">Blood Group</string>
    <string name="a">A+</string>
    <string name="b">B+</string>
    <string name="ab">AB+</string>
    <string name="o">O+</string>
    <string name="unit_need">Unit Need</string>
    <string name="_0">0</string>
    <string name="publish">Publish</string>
    <string name="kindly_make_blood_donation_request_and_we_alert_our_generous_donors_to_help_you_out">Kindly Make Blood Donation request and we alert our generous donors to help you out</string>
    <string name="all_requests">All Requests</string>
    <string name="need_blood">Need Blood</string>
    <string name="donate_blood">Donate Blood</string>
    <string name="lets_help_one_another">Lets help one another.</string>
    <string name="ready_to_save_life">Ready to Save Life ?</string>
    <string name="work">Work</string>
    <string name="blood_donation_app_by_henry">Blood Donation App by Henry</string>
    <string name="points">Points</string>
    <string name="favourite">favourite</string>
    <string name="donor"></string>
    <string name="point">All Blood Groups</string>

    <string name="condn">
        
        Must be in good general health,
  Must be at least 18 years old and no more than 65. \n
        After the age of 60, donors require the approval of a transfusion medicine physician,
  Must weight at least 50 kg,
  Must not be at risk of transmitting blood-borne diseases,

    </string>

    <string name="condn2">
  ,
  Must have a systolic blood pressure of 100-140 mmHg and a diastolic blood pressure of 60-90 mmHg,
  Must have a pulse rate of 60-100 bpm (beats per minute),
  Must have a temperature below 37.6°C,
  Must have a platelet count above 150x109/L,
    </string>

    <string name="condn3">
  Must have a systolic blood pressure of 100-140 mmHg and a diastolic blood pressure of 60-90 mmHg,
  Must have a pulse rate of 60-100 bpm (beats per minute),
  Must have a temperature below 37.6°C,
  Must have a platelet count above 150x109/L,
    </string>
    <string name="_100_safe">100% Safe</string>
    <string name="add_request">Add Request</string>
    <string name="request">Request</string>
    <string name="home">Home</string>
    <string name="profile">About</string>
    <string name="blood_group_a">Blood Group : A+</string>
    <string name="address">Address :</string>
    <string name="request_details">Request Details</string>
    <string name="address_address">Address : address</string>
    <string name="contact">Contact</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="applogo">Applogo</string>
    <string name="emailaddy">Email Address</string>
    <string name="password">Password</string>
    <string name="save_a_life_today">Save A Life Today</string>


<!--    google signin  key-->

    <string name="googlesignin">
        502259746570-2k2mborurtcqilgq21cbf5ndn6m6sjvd.apps.googleusercontent.com
    </string>
</resources>