<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav_pages.Profile_Page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="307dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/henry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/robotomedium"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/blood_donation_app_by_henry"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:elevation="10dp"
            android:padding="50dp"

            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:text=""
                        android:fontFamily="@font/robotomedium"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/point"
                        android:fontFamily="@font/robotomedium"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:src="@drawable/bloodlogo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:text="@string/donor"
                        android:textColor="@color/colorDark"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/_0"
                        android:fontFamily="@font/robotoregular"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/_100_safe"
                        android:fontFamily="@font/robotomedium"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="2">
            <TextView
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/robotobold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="@string/condn"/>

            <TextView
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/robotobold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/condn2"/>
            <TextView
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/robotobold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/condn3"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>