<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".authpages.Register">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/loginbg"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginregister"
            android:layout_width="330dp"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_login"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="52dp"
                android:layout_marginStart="48dp"
                android:layout_weight="1"
                android:fontFamily="@font/robotobold"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/colorDark"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.428" />

            <TextView
                android:id="@+id/text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/robotomedium"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/colorDarkLight"
                android:textSize="45sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/text_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toEndOf="@+id/text_login"
                app:layout_constraintTop_toTopOf="@+id/text_login" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/logoimg"
            android:layout_width="255dp"
            android:layout_height="172dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/applogo"
            android:src="@drawable/henry"
            app:layout_constraintEnd_toEndOf="@+id/loginregister"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="@+id/loginregister"
            app:layout_constraintTop_toBottomOf="@+id/loginregister" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/edittextshape"
            android:digits="0123456789"
            android:fontFamily="@font/robotomedium"
            android:hint="@string/phone_no"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="15dp"
            android:textColorHint="@color/colorDark"
            app:layout_constraintEnd_toEndOf="@+id/logoimg"
            app:layout_constraintStart_toStartOf="@+id/logoimg"
            app:layout_constraintTop_toBottomOf="@+id/logoimg" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/edittextshape"
            android:fontFamily="@font/robotomedium"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColorHint="@color/colorDark"
            app:layout_constraintEnd_toEndOf="@+id/logoimg"
            app:layout_constraintStart_toStartOf="@+id/logoimg"
            app:layout_constraintTop_toBottomOf="@+id/edit_phone" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/edittextshape"
            android:fontFamily="@font/robotomedium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="@color/colorDark"
            app:layout_constraintEnd_toEndOf="@+id/logoimg"
            app:layout_constraintStart_toStartOf="@+id/logoimg"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/edit_password"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/edit_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_password"
            android:background="@drawable/buttonshape"
            android:fontFamily="@font/robotobold"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>